--- a/index.html
+++ b/index.html
@@ -108,26 +108,27 @@
                 <div>
                     <div class="story">
 
-                        <div>
+                        <div class="our2">
                             <img class="our-img1" src="assets/story-2.png">
                             <button class="btnb">November 19, 2019</button>
-                            <h1>Find out if a school fits the family’s needs</h1>
+                            <h1 class="ab">Find out if a school fits the family’s needs</h1>
                         </div>
 
-                        <div>
+
+                        <div class="our2">
                             <img class="our-img1" src="assets/story-3.png">
                             <button class="btnb">November 19, 2019</button>
-                            <h1>Summer math & literacy centres for kids</h1>
+                            <h1 class="ab">Summer math & literacy centres for kids</h1>
                         </div>
-                        <div>
+                        <div class="our2">
                             <img class="our-img1" src="assets/story-4.png">
                             <button class="btnb">September 10, 2019</button>
-                            <h1>Classroom management techniques for new tutors</h1>
+                            <h1 class="ab">Classroom management techniques for new tutors</h1>
                         </div>
-                        <div>
+                        <div class="our2">
                             <img class="our-img1" src="assets/story-5.png">
                             <button class="btnb">July 19, 2019</button>
-                            <h1>Conversation rhymes improve kids listening</h1>
+                            <h1 class="ab">Conversation rhymes improve kids listening</h1>
                         </div>
                     </div>
                 </div>
